Remove need for --enable-preview from Spring Boot demo